# laser_measles_project_template

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  EVENT_SYSTEM_SUMMARY.md  MATERNAL_IMMUNITY_SUMMARY.md  NOTES.md  PROCESS_MCV1_SUMMARY.md  README.md  cliff.toml  pyproject.toml  test_event_system.py
.claude/agents/: git-commit-helper.md  laser-measles-expert.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
src/laser_measles_project_template/: __init__.py
src/project/abm/: base.py  events.py  model.py
src/project/abm/components/: __init__.py  process_disease.py  process_maternal_immunity.py  process_mcv1.py  process_vital_dynamics.py  process_wpp_vital_dynamics.py  tracker_birth_monitor.py  tracker_death_monitor.py
tests/: test_birth_monitor.py  test_death_monitor.py  test_event_system.py  test_maternal_immunity_integration.py  test_mcv1_integration.py
