[project]
name = "laser-measles-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "56368533+krosenfeld-IDM@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
