[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "krosenf@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "laser-core>=0.5.1",
    "pydantic>=2.11.5",
    "polars>=1.30.0",
    "alive-progress>=3.2.0",
    "typer>=0.12.0",
    "numpy",
    "numba",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
